<resources>
    <string name="app_name">USC Films</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="cat_movie">Movies</string>
    <string name="cat_tv">TV Shows</string>
    <string name="media_top_rated">Top-Rated</string>
    <string name="media_popular">Popular</string>
    <string name="base_url_media">http://changwanhw9.us-east-2.elasticbeanstalk.com/apis/media/</string>
    <string name="base_url_cast">http://changwanhw9.us-east-2.elasticbeanstalk.com/apis/cast/</string>
    <string name="base_url_search">http://changwanhw9.us-east-2.elasticbeanstalk.com/apis/search/</string>
    <string name="menu_open_TMDB">Open in TMDB</string>
    <string name="menu_share_facebook">Share on Facebook</string>
    <string name="menu_share_twitter">Share on Twitter</string>
    <string name="menu_watchlist">Add to Watchlist</string>
    <string name="title_activity_review">ReviewActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>